# iga-activity-collectors

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEVELOPER_COOKBOOK.md  Dockerfile  README.md  pyproject.toml
deployment/: docker-run.sh  k8s-cronjob.yaml
docs/: activity_log_schema.json  collectors.md  logging.md  writing_a_collector.md
examples/acme/: acme_collector.json  acme_directory.fieldmap.json  acme_directory_collector.json  acme_directory_collector.py
examples/activedirectory/: ad_collector.fieldmap.json  ad_collector.json  ad_collector.py
examples/aws/: aws_collector.fieldmap.json  aws_collector.json  aws_collector.py
examples/azure/: azure_collector.fieldmap.json  azure_collector.json  azure_collector.py
examples/entra/: entra_collector.fieldmap.json  entra_collector.json  entra_collector.py  entra_collector.signin.fieldmap.json  entra_collector.sp_signin.fieldmap.json
examples/google_cloud/: google_cloud_collector.fieldmap.json  google_cloud_collector.json  google_cloud_collector.py
examples/google_workspace/: google_workspace_collector.fieldmap.json  google_workspace_collector.json  google_workspace_collector.py
examples/jaeger/: jaeger_collector.fieldmap.json  jaeger_collector.json  jaeger_collector.py
examples/jdbc/: jdbc_collector.fieldmap.json  jdbc_collector.json  jdbc_collector.py
examples/logfile/: log_file_collector.fieldmap.json  log_file_collector.json  log_file_collector.py
examples/m365/: office365_collector.fieldmap.json  (+2 more)
tests/: test_base.py  test_discovery.py  test_mapping.py  test_uploader.py
(+27 files in other folders)
